# motus-function-app

motus-dFunc/: azure-pipelines.yml  pyproject.toml  test_calls.http
motus-dFunc/src/: requirements.txt
motus-dFunc/src/CheckEmployeesUpdate/: __init__.py  function.json
motus-dFunc/src/CheckMissingEmployees/: __init__.py  function.json
motus-dFunc/src/GetMainDF/: __init__.py  function.json
motus-dFunc/src/GetSubDF/: __init__.py  function.json
motus-dFunc/src/GetToken/: __init__.py  function.json
motus-dFunc/src/OrchestrationLoadEmployees/: __init__.py
motus-dFunc/src/Parameters/: __init__.py  function.json
motus-dFunc/src/SharedCode/: Decorate.py  KVAid.py  LogIt.py  Patch.py  Tuples.py
motus-dFunc/src/UploadNewEmployees/: __init__.py  function.json
motus-dFunc/src/UploadUpdatedEmployees/: __init__.py  function.json
motus-dFunc/test/: test_KVAid.py
