[project]
name = "motus-dFunc"
version = "0.1.0"
authors = [
    {"name" = "Zahlen Zbidnen", "email" = "zahlen.zbinden@coldist.com"}
]
description = "Coldist integration with Motus API"
requires-python = "3.9.*"

[tool.black]
line-length = 88
target_version = ["py39"]

[tool.isort]
multi_line_output = 1
force_grid_wrap = false
include_trailing_comma = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
